dist_bin_SCRIPTS = \
    relacshelp


EXTRA_DIST = \
    bin2dat.doc \
    bin2wav \
    remotebackup \
    scaninf scaninf.doc \
    RELACS.desktop


bin_PROGRAMS = \
    bin2dat

bin2dat_LDADD = \
    $(MATH_LIBS)

bin2dat_SOURCES = \
    bin2dat.c


noinst_PROGRAMS = \
    uw2sw

uw2sw_SOURCES = \
    uw2sw.c
