dist_bin_SCRIPTS = \
    relacshelp


EXTRA_DIST = \
    relacsstats \
    bin2dat.doc \
    remotebackup \
    scaninf scaninf.doc
#    RELACS.desktop


bin_PROGRAMS = \
    bin2dat \
    bin2wav

bin2dat_LDADD = \
    $(MATH_LIBS)

bin2dat_SOURCES = \
    bin2dat.c


bin2wav_LDADD = \
    $(MATH_LIBS)

bin2wav_SOURCES = \
    bin2wav.c


noinst_PROGRAMS = \
    uw2sw

uw2sw_SOURCES = \
    uw2sw.c
